# pbip2dbt

./: CLAUDE.md  Cargo.toml  README.md  deny.toml  implementation_plan.md
.github/workflows/: ci.yml
docs/: NFR.md  PRD.md  TASKS.md
src/: config.rs  error.rs  lib.rs  main.rs  naming.rs  zip_reader.rs
src/adapter/: bigquery.rs  mod.rs  postgres.rs  snowflake.rs  sqlserver.rs
src/dax/: ast.rs  calc_col_translator.rs  calc_table_translator.rs  measure_translator.rs  mod.rs  parser.rs
src/dbt_writer/: macros.rs  mod.rs  models.rs  project.rs  report.rs  schema.rs  sources.rs
src/m_lang/: ast.rs  mod.rs  parser.rs  translator.rs
src/tmdl/: ast.rs  mod.rs  parser.rs  tokenizer.rs
tests/: integration_test.rs
